# Portfolio-Optimization-Lib

./: pyproject.toml
MODELS/Brian/: brian_lgbm_v3.ipynb  lgbm_v3_metadata.json  lgbm_v3_model.txt
MODELS/Eamon/: minvar_wk3.ipynb
MODELS/Felix/: catboost_full_model.ipynb  catboost_full_model_v2.ipynb  catboost_full_model_v2_updated.ipynb
MODELS/Hannah/: autoencoder_week6.ipynb  baseline_autoencoder.ipynb  supervised_lstm_autoencoder.ipynb  supervised_lstm_autoencoder_volatility.ipynb  supervised_lstm_autoencoder_week7.ipynb
notebooks/templates/: mlp_end_to_end_workflow.ipynb
src/portfolio_toolkit/: backtest.py
