[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-toolkit"
version = "0.1.0"
description = "Lightweight notebook-first research toolkit for shared portfolio experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "yfinance>=0.2.54",
  "bt>=1.1.2",
  "quantstats>=0.0.64",
  "mlflow>=2.17",
  "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "nbformat>=5.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["portfolio_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
